--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,11 +56,11 @@ jobs:
 
     # Build the Windows Application Packaging project for Release (x64)
     - name: Build the Windows Application Packaging Project (chronokeep)
-      run: msbuild $env:Solution_Path /p:Platform=x64 /p:Configuration=Release /p:PackageCertificateKeyFile=$env:SigningCertificate /p:PackageCertificatePassword=${{ secrets.PFX_KEY }}
+      run: msbuild $env:Solution_Path /p:Platform=x64 /p:Configuration=Release /p:PackageCertificateKeyFile=$env:Project_Directory\$env:SigningCertificate /p:PackageCertificatePassword="${{ secrets.PFX_KEY }}"
 
     # Build the Windows Application Packaging project for Release (x86)
     - name: Build the Windows Application Packaging Project (chronokeep)
-      run: msbuild $env:Solution_Path /p:Platform=x86 /p:Configuration=Release /p:PackageCertificateKeyFile=$env:SigningCertificate /p:PackageCertificatePassword=${{ secrets.PFX_KEY }}
+      run: msbuild $env:Solution_Path /p:Platform=x86 /p:Configuration=Release /p:PackageCertificateKeyFile=$env:Project_Directory\$env:SigningCertificate /p:PackageCertificatePassword="${{ secrets.PFX_KEY }}"
 
     # Remove the .pfx
     - name: Remove the .pfx
