--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
 
     env:
       SigningCertificate: Chronokeep\Chronokeep.pfx
-      Solution_Path: Chronokeep.sln
+      Solution_Path: Chronokeep\Chronokeep.csproj
       App_Packages_Archive: Chronokeep.zip
       x64_Compile_Path: Chronokeep\bin\x64\Release
       x86_Compile_Path: Chronokeep\bin\x86\Release
@@ -45,20 +45,20 @@ jobs:
     - name: Restore Nuget Packages
       run: nuget restore $env:Solution_Path
 
-    # Decode the Base64 encoded Pfx
-    - name: Decode the Pfx
-      run: |
-        $pfx_cert_byte = [System.Convert]::FromBase64String("${{ secrets.BASE64_ENCODED_PFX }}")
-        $currentDirectory = Get-Location
-        $certificatePath = Join-Path -Path $currentDirectory -ChildPath $env:SigningCertificate
-        [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
+    ## Decode the Base64 encoded Pfx
+    #- name: Decode the Pfx
+    #  run: |
+    #    $pfx_cert_byte = [System.Convert]::FromBase64String("${{ secrets.BASE64_ENCODED_PFX }}")
+    #    $currentDirectory = Get-Location
+    #    $certificatePath = Join-Path -Path $currentDirectory -ChildPath $env:SigningCertificate
+    #    [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
 
     # Build the app for Release (x64)
-    - name: Build the Windows Application Packaging Project (chronokeep)
+    - name: Build x64
       run: msbuild $env:Solution_Path /p:Platform=x64 /p:Configuration=Release
 
     # Build the app for Release (x86)
-    - name: Build the Windows Application Packaging Project (chronokeep)
+    - name: Build x86
       run: msbuild $env:Solution_Path /p:Platform=x86 /p:Configuration=Release
 
     # Remove the .pfx
@@ -66,15 +66,15 @@ jobs:
       run: Remove-Item -path $env:SigningCertificate
 
     # Archive the package (x64)
-    - name: Create archive
+    - name: Create archive x64
       run: Compress-Archive -Path $env:x64_Compile_Path\* -DestinationPath $env:x64_Compile_Path\$env:App_Packages_Archive
 
     # Archive the package (x86)
-    - name: Create archive
+    - name: Create archive x86
       run: Compress-Archive -Path $env:x86_Compile_Path\* -DestinationPath $env:x86_Compile_Path\$env:App_Packages_Archive
 
     # Create the release:  https://github.com/actions/create-release (x64)
-    - name: Create release
+    - name: Create release x64
       id: create_release_x64
       uses: actions/create-release@v1
       env:
@@ -86,7 +86,7 @@ jobs:
         prerelease: false
 
     # Upload release asset:   https://github.com/actions/upload-release-asset (x64)
-    - name: Update release asset
+    - name: Update release asset x64
       id: upload-release-asset-x64
       uses: actions/upload-release-asset@v1
       env:
@@ -98,7 +98,7 @@ jobs:
         asset_content_type: application/zip
 
     # Create the release:  https://github.com/actions/create-release (x86)
-    - name: Create release
+    - name: Create release x86
       id: create_release_x86
       uses: actions/create-release@v1
       env:
@@ -110,7 +110,7 @@ jobs:
         prerelease: false
 
     # Upload release asset:   https://github.com/actions/upload-release-asset (x86)
-    - name: Update release asset
+    - name: Update release asset x86
       id: upload-release-asset-x86
       uses: actions/upload-release-asset@v1
       env:
