--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,8 +15,7 @@ jobs:
 
     env:
       SigningCertificate: Chronokeep\Chronokeep.pfx
-      Solution_Path: Chronokeep\Chronokeep.csproj
-      Nuget_Path: Chronokeep.sln
+      Solution_Path: Chronokeep.sln
       App_Packages_Archive: Chronokeep.zip
       x64_Compile_Path: Chronokeep\bin\x64\Release
       x86_Compile_Path: Chronokeep\bin\x86\Release
@@ -44,7 +43,7 @@ jobs:
 
     # Restore Nuget Packages
     - name: Restore Nuget Packages
-      run: nuget restore $env:Nuget_Path
+      run: nuget restore $env:Solution_Path
 
     # Build the app for Release (x64)
     - name: Build x64
