Specifying different msbuild.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,6 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-      with:
-        fetch-depth: 0 # avoid shallow clone so nbgv can do its work.
 
     # Install the .NET Core workload
     - name: Install .NET Core
@@ -35,7 +33,9 @@ jobs:
 
     # Add  MsBuild to the PATH: https://github.com/microsoft/setup-msbuild
     - name: Setup MSBuild.exe
-      uses: microsoft/setup-msbuild@v1.0.1
+      uses: microsoft/setup-msbuild@v1.1
+      with:
+        vs-version: '17.0'
 
     # Setup Nuget to restore packages
     - name: Setup Nuget
