--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -22,7 +22,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Get tag
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=$(git describe --tag)" >> $GITHUB_ENV
 
       # Runs a set of commands using the runners shell
       - name: Output version
