Update code for outputting version information for release.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,6 +61,10 @@ jobs:
     - name: Create archive x86
       run: Compress-Archive -Path $env:x86_Compile_Path\* -DestinationPath $env:x86_Compile_Path\$env:App_Packages_Archive
 
+    # Set an environment variable to the tag we want to use to describe this release.
+    - name: Get tag environment variable.
+      run: echo "RELEASE_VERSION=$(git describe --tag)" >> $GITHUB_ENV
+
     # Create the release:  https://github.com/actions/create-release (x64)
     - name: Create release x64
       id: create_release_x64
@@ -68,8 +72,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: ${{ github.ref }}.x64
-        release_name:  ${{ github.ref }}.x64
+        tag_name: ${{ env.RELEASE_VERSION }}.x64
+        release_name:  ${{ env.RELEASE_VERSION }}.x64
         draft: false
         prerelease: false
 
@@ -92,8 +96,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: ${{ github.ref }}.x86
-        release_name:  ${{ github.ref }}.x86
+        tag_name: ${{ env.RELEASE_VERSION }}.x86
+        release_name:  ${{ env.RELEASE_VERSION }}.x86
         draft: false
         prerelease: false
 
