--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,7 +63,8 @@ jobs:
 
     # Set an environment variable to the tag we want to use to describe this release.
     - name: Get tag environment variable.
-      run: echo "RELEASE_VERSION=$(git describe --tag)" >> $GITHUB_ENV
+      run: echo '::set-output name=RELEASE_VERSION::$(git describe --tag)'
+      id: release-version
 
     # Create the release:  https://github.com/actions/create-release (x64)
     - name: Create release x64
@@ -72,8 +73,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: ${{ env.RELEASE_VERSION }}.x64
-        release_name:  ${{ env.RELEASE_VERSION }}.x64
+        tag_name: ${{ steps.release-version.outputs.RELEASE_VERSION }}.x64
+        release_name:  ${{ steps.release-version.outputs.RELEASE_VERSION }}.x64
         draft: false
         prerelease: false
 
@@ -96,8 +97,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: ${{ env.RELEASE_VERSION }}.x86
-        release_name:  ${{ env.RELEASE_VERSION }}.x86
+        tag_name: ${{ steps.release-version.outputs.RELEASE_VERSION }}.x86
+        release_name:  ${{ steps.release-version.outputs.RELEASE_VERSION }}.x86
         draft: false
         prerelease: false
 
