--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,7 +63,7 @@ jobs:
 
     # Set an environment variable to the tag we want to use to describe this release.
     - name: Get tag environment variable.
-      run: echo '::set-output name=RELEASE_VERSION::$(git describe --tag)'
+      run: echo "::set-output name=RELEASE_VERSION::$(git describe --tag)"
       id: release-version
 
     # Create the release:  https://github.com/actions/create-release (x64)
