--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,30 +66,6 @@ jobs:
       run: echo "::set-output name=RELEASE_VERSION::$(git describe --tag)"
       id: release-version
 
-    # Create the release:  https://github.com/actions/create-release (x64)
-    - name: Create release x64
-      id: create_release_x64
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-      with:
-        tag_name: ${{ steps.release-version.outputs.RELEASE_VERSION }}.x64
-        release_name:  ${{ steps.release-version.outputs.RELEASE_VERSION }}.x64
-        draft: false
-        prerelease: false
-
-    # Upload release asset:   https://github.com/actions/upload-release-asset (x64)
-    - name: Update release asset x64
-      id: upload-release-asset-x64
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release_x64.outputs.upload_url }}  # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: ${{ env.x64_Compile_Path }}\${{ env.App_Packages_Archive }}
-        asset_name: ${{ env.App_Packages_Archive }}
-        asset_content_type: application/zip
-
     # Create the release:  https://github.com/actions/create-release (x86)
     - name: Create release x86
       id: create_release_x86
@@ -97,8 +73,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: ${{ steps.release-version.outputs.RELEASE_VERSION }}.x86
-        release_name:  ${{ steps.release-version.outputs.RELEASE_VERSION }}.x86
+        tag_name: ${{ steps.release-version.outputs.RELEASE_VERSION }}-x86
+        release_name:  ${{ steps.release-version.outputs.RELEASE_VERSION }}-x86
         draft: false
         prerelease: false
 
@@ -111,5 +87,29 @@ jobs:
       with:
         upload_url: ${{ steps.create_release_x86.outputs.upload_url }}  # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
         asset_path: ${{ env.x86_Compile_Path }}\${{ env.App_Packages_Archive }}
+        asset_name: ${{ env.App_Packages_Archive }}
+        asset_content_type: application/zip
+
+    # Create the release:  https://github.com/actions/create-release (x64)
+    - name: Create release x64
+      id: create_release_x64
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      with:
+        tag_name: ${{ steps.release-version.outputs.RELEASE_VERSION }}-x64
+        release_name:  ${{ steps.release-version.outputs.RELEASE_VERSION }}-x64
+        draft: false
+        prerelease: false
+
+    # Upload release asset:   https://github.com/actions/upload-release-asset (x64)
+    - name: Update release asset x64
+      id: upload-release-asset-x64
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release_x64.outputs.upload_url }}  # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+        asset_path: ${{ env.x64_Compile_Path }}\${{ env.App_Packages_Archive }}
         asset_name: ${{ env.App_Packages_Archive }}
         asset_content_type: application/zip
