Changing the name of the installer to reflect its nature. Added registry key so the app registers the fact that it can be uninstalled. Adding code for an uninstaller.

--- a/Install/Install.csproj
+++ b/Install/Install.csproj
@@ -5,8 +5,14 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
-    <StartupObject>ChronoUpdate.App</StartupObject>
+    <StartupObject>Install.App</StartupObject>
+    <Company>$(Authors)</Company>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="version.txt" />
+  </ItemGroup>
 
   <ItemGroup>
     <COMReference Include="IWshRuntimeLibrary">
@@ -21,10 +27,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
+    <Folder Include="Properties\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="version.txt">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+    <Exec Command="git describe --tag &gt; &quot;$(ProjectDir)version.txt&quot;" />
+  </Target>
 
 </Project>
