Migrating code from NET Framework 4.8 to NET 6. Changed JSON code from Newtonsoft to build in JSON serializer/deserializer. Printing code no longer functions properly due to MigraDoc not functioning with .NET standard.  Will update printing code later.

--- a/Install/Install.csproj
+++ b/Install/Install.csproj
@@ -8,6 +8,8 @@
     <StartupObject>Install.App</StartupObject>
     <Company>$(Authors)</Company>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <IsPublishable>True</IsPublishable>
+    <SignAssembly>False</SignAssembly>
   </PropertyGroup>
 
   <ItemGroup>
