--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ jobs:
       Solution_Path: Chronokeep.sln
       App_Packages_Archive: chronokeep-setup.exe
       Compile_Path: Chronokeep\bin\Release\net6.0-windows
+      Version_Path: ChronoKeep\version.txt
       Actions_Allow_Unsecure_Commands: true # Allows AddPAth and SetEnv commands
 
     steps:
@@ -43,6 +44,10 @@ jobs:
     # Restore Nuget Packages
     - name: Restore Nuget Packages
       run: nuget restore $env:Solution_Path
+
+    # Generate version text file because msbuild isn't generating it properly
+    - name: Generate version text file
+      run: git describe --tag > $env:Version_Path
 
     # Build the app for Release
     - name: Build program
