Fixed an issue where pre-build events were not happening.  They are not visible via the project preferences screen now though. Checking for updates from the about page will now tell you if no update is found. Setup file can be run when install is clicked.

--- a/ChronoKeep/ChronoKeep.csproj
+++ b/ChronoKeep/ChronoKeep.csproj
@@ -180,9 +180,6 @@
     <Content Include="IO\HtmlTemplates\style.css" />
     <EmbeddedResource Include="IO\HtmlTemplates\style.min.css" />
   </ItemGroup>
-  <PropertyGroup>
-    <PreBuildEvent>git describe --tag &gt; "$(ProjectDir)version.txt"</PreBuildEvent>
-  </PropertyGroup>
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
@@ -206,4 +203,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <Target Name="PreBuild" AfterTargets="PreBuildEvent">
+    <Exec Command="git describe --tag &gt; &quot;$(ProjectDir)version.txt&quot;" />
+  </Target>
 </Project>
