--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,7 @@ jobs:
 
     # Set an environment variable to the tag we want to use to describe this release.
     - name: Get tag environment variable.
-      run: echo "::set-output name=RELEASE_VERSION::$(git describe --tag)"
+      run: echo "RELEASE_VERSION=$(git describe --tag)" >> $GITHUB_OUTPUT
       id: release-version
 
     # Run Inno Setup
